add middleware JWT
